# hangman-hs

./: README.md  hangman.cabal  stack.yaml
src/: Main.hs
src/.stack-work/intero/: intero13879kqc.hs
