name:                hangman
version:             0.1.0.0
-- synopsis:
description:         Hangman from HaskellBook.com
homepage:            https://github.com/borkdude/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Michiel Borkent
maintainer:          michielborkent@gmail.com
copyright:           Michiel Borkent
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
  ghc-options: -Wall
